--- a/HW_5.ipynb
+++ b/HW_5.ipynb
@@ -438,9 +438,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "KerasGPU",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "kerasgpu"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
